--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,9 +20,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-    - name: checkout code
-    - uses: actions/checkout@v4
+    
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up JDK 11
       uses: actions/setup-java@v4
