--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
+
     - name: Checkout code
       uses: actions/checkout@v4
     
     - name: Set up JDK 11
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'adoptopenjdk'
+        distribution: 'temurin'
 
     # Ejecuta Maven para compilar y ejecutar las pruebas
     - name: Build with Maven
